DbtHelper.Jinja2/Gen/JinjaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/git/personal/dbt-helper/DbtHelper.Jinja2/Gen/JinjaParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class JinjaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMMA=1, INT=2, DOUBLE=3, STRING=4, BOOL=5, ADD=6, SUB=7, MUL=8, DIV=9, 
		NOT=10, TRUE=11, FALSE=12, EQ=13, NEQ=14, LPAREN=15, RPAREN=16, EQUALS=17, 
		LCURLY=18, RCURLY=19, QUOTE=20, RSQBRACKET=21, LSQBRACKET=22, COLON=23, 
		EXPRESSION_START=24, EXPRESSION_END=25, AND=26, OR=27, GT=28, LT=29, GTEQ=30, 
		LTEQ=31, IF_WORD=32, ELIF=33, ENDIF=34, BLOCK_START=35, BLOCK_END=36, 
		ELSE=37, WHILE=38, END_WHILE=39, SET_BLOCK=40, MACRO=41, END_MACRO=42, 
		FOR=43, END_FOR=44, IN=45, ID=46, WS=47, NEWLINE=48, COMMENT=49, SYMBOLS=50, 
		TEXT=51;
	public const int
		RULE_file = 0, RULE_program = 1, RULE_statement = 2, RULE_non_macro_statements = 3, 
		RULE_assignment_statement = 4, RULE_expression = 5, RULE_collection = 6, 
		RULE_dictionary = 7, RULE_dictionary_fragment = 8, RULE_dictionary_item = 9, 
		RULE_dictionary_accessor = 10, RULE_collection_accessor = 11, RULE_boolean_expression = 12, 
		RULE_evaluation_statement = 13, RULE_macro_statement = 14, RULE_macro_fragement = 15, 
		RULE_func_fragment = 16, RULE_variable_statement = 17, RULE_end_macro = 18, 
		RULE_func = 19, RULE_if_statement = 20, RULE_elif_statement = 21, RULE_else_statement = 22, 
		RULE_if_fragment = 23, RULE_elif_fragment = 24, RULE_else_fragment = 25, 
		RULE_endif_fragment = 26, RULE_code_block = 27, RULE_while_statement = 28, 
		RULE_while_fragment = 29, RULE_endwhile_fragment = 30, RULE_for_statement = 31, 
		RULE_for_fragment = 32, RULE_endfor_fragment = 33, RULE_body = 34, RULE_contents = 35;
	public static readonly string[] ruleNames = {
		"file", "program", "statement", "non_macro_statements", "assignment_statement", 
		"expression", "collection", "dictionary", "dictionary_fragment", "dictionary_item", 
		"dictionary_accessor", "collection_accessor", "boolean_expression", "evaluation_statement", 
		"macro_statement", "macro_fragement", "func_fragment", "variable_statement", 
		"end_macro", "func", "if_statement", "elif_statement", "else_statement", 
		"if_fragment", "elif_fragment", "else_fragment", "endif_fragment", "code_block", 
		"while_statement", "while_fragment", "endwhile_fragment", "for_statement", 
		"for_fragment", "endfor_fragment", "body", "contents"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'!'", 
		"'True'", "'False'", "'=='", "'!='", "'('", "')'", "'='", "'{'", "'}'", 
		"'\"'", "']'", "'['", "':'", "'{{'", "'}}'", "'&&'", "'||'", "'>'", "'<'", 
		"'>='", "'<='", "'if'", "'elif'", "'endif'", "'{%'", "'%}'", "'else'", 
		"'while'", "'{% endwhile %}'", "'{% set'", "'macro'", "'endmacro'", "'for'", 
		"'endfor'", "'in'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMMA", "INT", "DOUBLE", "STRING", "BOOL", "ADD", "SUB", "MUL", 
		"DIV", "NOT", "TRUE", "FALSE", "EQ", "NEQ", "LPAREN", "RPAREN", "EQUALS", 
		"LCURLY", "RCURLY", "QUOTE", "RSQBRACKET", "LSQBRACKET", "COLON", "EXPRESSION_START", 
		"EXPRESSION_END", "AND", "OR", "GT", "LT", "GTEQ", "LTEQ", "IF_WORD", 
		"ELIF", "ENDIF", "BLOCK_START", "BLOCK_END", "ELSE", "WHILE", "END_WHILE", 
		"SET_BLOCK", "MACRO", "END_MACRO", "FOR", "END_FOR", "IN", "ID", "WS", 
		"NEWLINE", "COMMENT", "SYMBOLS", "TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JinjaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static JinjaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JinjaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JinjaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program() {
			return GetRuleContext<ProgramContext>(0);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(JinjaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 2, RULE_program);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 74;
					statement();
					}
					} 
				}
				State = 79;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 80;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Non_macro_statementsContext non_macro_statements() {
			return GetRuleContext<Non_macro_statementsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Macro_statementContext macro_statement() {
			return GetRuleContext<Macro_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				non_macro_statements();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				macro_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Non_macro_statementsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Evaluation_statementContext evaluation_statement() {
			return GetRuleContext<Evaluation_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public If_statementContext if_statement() {
			return GetRuleContext<If_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Assignment_statementContext assignment_statement() {
			return GetRuleContext<Assignment_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public While_statementContext while_statement() {
			return GetRuleContext<While_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public For_statementContext for_statement() {
			return GetRuleContext<For_statementContext>(0);
		}
		public Non_macro_statementsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_non_macro_statements; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNon_macro_statements(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Non_macro_statementsContext non_macro_statements() {
		Non_macro_statementsContext _localctx = new Non_macro_statementsContext(Context, State);
		EnterRule(_localctx, 6, RULE_non_macro_statements);
		try {
			State = 92;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 86;
				evaluation_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87;
				body();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88;
				if_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 89;
				assignment_statement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 90;
				while_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 91;
				for_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Assignment_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SET_BLOCK() { return GetToken(JinjaParser.SET_BLOCK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(JinjaParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(JinjaParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLOCK_END() { return GetToken(JinjaParser.BLOCK_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(JinjaParser.NEWLINE, 0); }
		public Assignment_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Assignment_statementContext assignment_statement() {
		Assignment_statementContext _localctx = new Assignment_statementContext(Context, State);
		EnterRule(_localctx, 8, RULE_assignment_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94;
			Match(SET_BLOCK);
			State = 95;
			Match(ID);
			State = 96;
			Match(EQUALS);
			State = 97;
			expression(0);
			State = 98;
			Match(BLOCK_END);
			State = 100;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				{
				State = 99;
				Match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EqIntContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(JinjaParser.INT, 0); }
		public EqIntContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqInt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqDblContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE() { return GetToken(JinjaParser.DOUBLE, 0); }
		public EqDblContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqDbl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqDictionaryContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public DictionaryContext dictionary() {
			return GetRuleContext<DictionaryContext>(0);
		}
		public EqDictionaryContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqDictionary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqDictionaryAccessorContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public Dictionary_accessorContext dictionary_accessor() {
			return GetRuleContext<Dictionary_accessorContext>(0);
		}
		public EqDictionaryAccessorContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqDictionaryAccessor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqFuncContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncContext func() {
			return GetRuleContext<FuncContext>(0);
		}
		public EqFuncContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqFunc(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqStrContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(JinjaParser.STRING, 0); }
		public EqStrContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqStr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqExBoolContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(JinjaParser.BOOL, 0); }
		public EqExBoolContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqExBool(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqCollectionAccessorContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public Collection_accessorContext collection_accessor() {
			return GetRuleContext<Collection_accessorContext>(0);
		}
		public EqCollectionAccessorContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqCollectionAccessor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqParContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(JinjaParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(JinjaParser.RPAREN, 0); }
		public EqParContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqPar(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqAddContext : ExpressionContext {
		public ExpressionContext left;
		public IToken @operator;
		public ExpressionContext right;
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(JinjaParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(JinjaParser.SUB, 0); }
		public EqAddContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqAdd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqVarContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(JinjaParser.ID, 0); }
		public EqVarContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqVar(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqCollectionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public CollectionContext collection() {
			return GetRuleContext<CollectionContext>(0);
		}
		public EqCollectionContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqCollection(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqMULContext : ExpressionContext {
		public ExpressionContext left;
		public IToken @operator;
		public ExpressionContext right;
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(JinjaParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(JinjaParser.DIV, 0); }
		public EqMULContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqMUL(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				_localctx = new EqParContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
